--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,8 @@ Priority: optional
 Maintainer: Andreas Henriksson <andreas@fatal.se>
 Build-Depends: debhelper (>= 11), libreadline-dev, libdbus-1-dev
 Standards-Version: 4.1.2
-Vcs-Git: https://salsa.debian.org/debian/iwd
-Vcs-Browser: https://salsa.debian.org/debian/iwd.git
+Vcs-Git: https://salsa.debian.org/debian/iwd.git
+Vcs-Browser: https://salsa.debian.org/debian/iwd
 
 Package: iwd
 Architecture: linux-any
