--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,7 +1,7 @@
 [DEFAULT]
 debian-branch = debian/master
 upstream-branch = upstream/latest
-#pristine-tar = True
+pristine-tar = True
 sign-tags = True
 
 [import-orig]
