--- a/debian/rules
+++ b/debian/rules
@@ -5,6 +5,9 @@ export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 %:
 	dh $@
 
+override_dh_auto_configure:
+	dh_auto_configure -- --enable-external-ell
+
 override_dh_auto_test:
 	# testsuite doesn't pass on buildds, possibly because of
 	# too old kernel?! Make it non-fatal for now...
