Build-dep on openssl for unit test cert generation
Test certificates used by unit testing is now generated locally at build
time and needs openssl command.

--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: Andreas Henriksson <andreas@fatal.se>
 Build-Depends: debhelper-compat (= 12),
                libreadline-dev,
                libdbus-1-dev,
+               openssl <!nocheck>,
                python3-docutils <!nodoc>,
                systemd
 Standards-Version: 4.2.1
