Recommend dbus (system bus)
Interaction with iwd happens via dbus, i.e. as used by the iwctl
command (or NetworkManager iwd backend).
Packages using D-Bus usually doesn't describe this in their package
relationships and implicitly rely on everyone having a bus available.
People using iwd however seems to be confused about the lack of a
startup script and fails to realize that "dbus activation" is the
intended way to start iwd so hopefully making the dbus relationship more
explicit will give a hint and help people figure this out.

Gbp-Dch: Full

--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,7 @@ Vcs-Browser: https://salsa.debian.org/debian/iwd
 Package: iwd
 Architecture: linux-any
 Depends: ${shlibs:Depends}, ${misc:Depends}
+Recommends: dbus | dbus-system-bus
 Description: wireless daemon for Linux
  Minimalistic wireless daemon that uses modern Linux interfaces like
  cfg80211 and nl80211 (netlink). The daemon provides a D-Bus API.
