--- a/debian/control
+++ b/debian/control
@@ -26,3 +26,7 @@ Description: wireless daemon for Linux
  The included iwmon utility can be used to monitor the 802.11 subsystem
  generic netlink commands and events. It uses the nlmon kernel driver
  from Linux 3.10 and later.
+ .
+ Note that the package defaults to relying on dbus activation to start.
+ If you want to use iwd standalone without any manager, then you'll need
+ to manually enable the system service.
