--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,12 @@
 Source: iwd
 Section: net
 Priority: optional
-Maintainer: Andreas Henriksson <andreas@fatal.se>
+Maintainer: Job Bautista <jobbautista9@protonmail.com>
 Build-Depends: debhelper-compat (= 12),
                libreadline-dev,
                libdbus-1-dev,
                openssl <!nocheck>,
                python3-docutils <!nodoc>,
-               systemd
 Standards-Version: 4.2.1
 Vcs-Git: https://salsa.debian.org/debian/iwd.git
 Vcs-Browser: https://salsa.debian.org/debian/iwd
