Update gbp.conf for Devuan packaging
Added upstream-tag and debian-tag
Set pristine-tar to False
Set debian-branch to suites/unstable

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,8 +1,10 @@
 [DEFAULT]
-debian-branch = debian/master
+debian-branch = suites/unstable
 upstream-branch = upstream/latest
-pristine-tar = True
+pristine-tar = False
 sign-tags = True
+upstream-tag=upstream/%(version)s
+debian-tag=devuan/%(version)s
 
 [import-orig]
 upstream-vcs-tag = %(version)s
